// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sanitizeJSX 1`] = `
"
    <code>
      function foo() {
        console.log('foo');
      }
    </code>
  "
`;

exports[`sanitizeJSX 2`] = `
"
    <code>
      function foo() {
        console.log('foo');
      }
    </code>
    <code>
      function bar() {
        console.log('bar');
      }
    </code>
"
`;

exports[`sanitizeJSX 3`] = `
"
    \\"{
      some: 'object
    \\"}
  "
`;
